[package]
name = "vps-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = "0.8.6"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.13"
uuid = "1.17.0"
dotenvy = "0.15"
